--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Edit patient') %>
 <% provide(:button_text, 'Update Record') %>
 
-<h3 class='display-1'>Edit Patient Record</h3>
+<h3 class='display-1'>Edit Your Patient Profile</h3>
 
 <div class="well">
 	<%= render 'form' %>
