--- a/app/views/visits/_patient_form.html.erb
+++ b/app/views/visits/_patient_form.html.erb
@@ -21,7 +21,7 @@
   <!-- Row 3 -->
 
   <div class="col-sm-2">
-  <%= f.input :temp, hint: 'Required', label: "Temperature" %>
+  <%= f.input :temp, label: "Temperature" %>
   </div>
 
   <div class="col-sm-2">
