--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -20,7 +20,8 @@ html,body {
   overflow-y: scroll;
   font: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
-  font-size: 0.9em;
+  font-size: 0.95em;
+//  font-size: 0.9em;
 }
 
 p.medium {
