--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,13 +12,15 @@
 
 <div class="medium">
   <font color="red"> Due to exceptional circumstances caused by COVID-19 pandemic, our clinic is currently closed. </font>
+
+<font style="size: 16px">
 <div class='spacer-10'></div>
 <div>
   <ul>
     <li>
-  If you are registered patient and need to renew your medication, or have another <u>urgent</u> issue, please call Dr. Ostapenko @ (289) 204-0561 directly. If not available right away, she will return your call as soon as possible.
+  If you are registered patient and need to renew your medication, or have health-related question, please register below and make a televisit appointment with Dr. Ostapenko. You can also call (289) 204-0561 and leave a message. She will retun your call as soon as she can.
     </li>
-    <li> If you are not registered with us but urgently need medical help, please call the number below. We are doing our best to return all calls as fast as we can. </li>
+    <li> If you are not registered with us, but need medical help, please create your patient profile using the button below. </li>
     <li> 
       Uninsured patients: we are trying to help everybody - even if you don't have valid health insurance you can still call the number below and get medical help 
     </li>
@@ -27,11 +29,18 @@
 </div>
 
 <div class='spacer-10'></div>
-We are working hard to add virtual visit functionality to our website as fast as possible. In the meantime, please call the number below:
 
 <h1>Dr. Ostapenko: (289) 204-0561  </h1>
 
-<p>OHIP insured patients can register <%= link_to 'Here', new_user_registration_path %> </p>
+<div align="center"> <%= link_to 'Please Click Here to Register', new_user_registration_path, class: "btn btn-primary" %> </div>
+</font>
+
+<div class='spacer-30'></div>
+<div style="float:right">
+<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=61aeb9b491&e=b5dca5db64" class="btn btn-danger">A video on #socialdistancing</a>
+<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=cc0e3b2071&e=b5dca5db64" class="btn btn-info">A quick video with five tips for COVID-9 </a>
+<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=440e19b368&e=b5dca5db64" class="btn btn-warning">A video on how to wash your hands</a>
+</div>
 
 <!--
 <p class="medium">
