--- a/app/views/visits/_patient_show.html.erb
+++ b/app/views/visits/_patient_show.html.erb
@@ -17,29 +17,7 @@
 <b>Vital signs</b>: T: <%= @visit.temp %> P: <%= @visit.pulse %> BP: <%= @visit.bp %>
 <% end %>
 <% if @visit.diag_code.present? %>
-<b>Diagnosis</b> : <%= @visit.diag_code %> : <%= @visit.diag_descr  %>
-<% end %>
-<% if @visit.services.any? %>
-<b>Services</b> : <%=  @visit.proc_codes %>
-<% end %>
-<b>Entry by </b>: <%= @visit.entry_by %>
-<b>Entered at </b>: <%= @visit.entry_ts %>
-<% if @visit.billing_ref.present? %>
-<% if @visit.status == ERROR %>       
-   <b>Error code: </b>: <%= link_to @visit.billing_ref, '#', {title: codehash[@visit.billing_ref]}  %>
-<% else %>
-<b>Billing Ref# </b>: <%= @visit.billing_ref %>
-<% end %>
-<% end %>
-<% if @visit.export_file.present? %>
-<b>Export file</b>: <%= @visit.export_file %>
-<% end %>
-<% if @visit.documents.present? %>
-<b>Documents</b>: 
-<% @visit.documents.each do |d| %>
-   <% next unless d.document.file.present? %>
-   <%= link_to d.document.file.filename, d.document.url.to_s %>
-<% end %>
+<b>Diagnosis</b> : <%= @visit.diag_descr  %>
 <% end %>
 </pre>
 
@@ -51,18 +29,10 @@
 </div>
 <% end %>
 
-<% if @visit.notes.present? %>
-<div class="panel panel-info">
-   <div class="visit-notes-panel-body">
-<b>Notes </b>: <%= @visit.notes.html_safe %>	     
-   </div>
-</div>
-<% end %>
 
 </section>
 </div>
 </div>
 
-  <%= render "#{current_user.role}_buttons" %>
 
 
