links changed on homepage

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -37,9 +37,9 @@
 
 <div class='spacer-30'></div>
 <div style="float:right">
-<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=61aeb9b491&e=b5dca5db64" class="btn btn-danger">A video on #socialdistancing</a>
-<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=cc0e3b2071&e=b5dca5db64" class="btn btn-info">A quick video with five tips for COVID-9 </a>
-<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=440e19b368&e=b5dca5db64" class="btn btn-warning">A video on how to wash your hands</a>
+<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=61aeb9b491&e=b5dca5db64" class="btn btn-danger" target="_new">A video on #socialdistancing</a>
+<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=cc0e3b2071&e=b5dca5db64" class="btn btn-info" target="_new">A quick video with five tips for COVID-19 </a>
+<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=440e19b368&e=b5dca5db64" class="btn btn-warning" target="_new">A video on how to wash your hands</a>
 </div>
 
 <!--
