--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -20,8 +20,13 @@ html,body {
   overflow-y: scroll;
   font: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
-  font-size: 0.95em;
+  font-size: 0.92em;
 //  font-size: 0.9em;
+}
+
+p.small {
+    line-height: 0.8em;
+    font-size: 0.7em;
 }
 
 p.medium {
@@ -33,10 +38,10 @@ p.medium {
 
 p {
     padding: .8em 1.0;
-    line-height: 1.3em;
+    line-height: 1.1em;
     text-align: justify;
     font: Arial, Helvetica, sans-serif;
-    font-size: 1.0em;
+    font-size: 0.97em;
 }
 
 .container, .help-container {
