--- a/app/views/layouts/_logo.html.erb
+++ b/app/views/layouts/_logo.html.erb
@@ -2,10 +2,13 @@
 <li class="dropdown nav-item">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-menu-hamburger text-muted"></i></a>
 <ul class="dropdown-menu">
-	<li><%= link_to "<i class='glyphicon glyphicon-user'></i> User Profile".html_safe, edit_user_path(current_user.id), remote: true, 'data-toggle': "modal", 'data-target': '#modal-window', method: "get", onclick: "set_sm_modal()"  %></li>
 
 <% if current_user.patient? %>
         <li><%= link_to "<font color='red'><i class='glyphicon glyphicon-user'></i></font> Patient Profile".html_safe, edit_patient_path(current_user.patient), remote: true, 'data-toggle': "modal", 'data-target': '#modal-window', method: "get", onclick: "set_lg_modal()"  %></li>
+	<li><%= link_to "<i class='glyphicon glyphicon-user'></i> User Profile".html_safe, edit_user_path(current_user.id), remote: true, 'data-toggle': "modal", 'data-target': '#modal-window', method: "get", onclick: "set_sm_modal()"  %></li>
+<% else %>
+	<li><%= link_to "<i class='glyphicon glyphicon-user'></i> User Profile".html_safe, edit_user_path(current_user.id), remote: true, 'data-toggle': "modal", 'data-target': '#modal-window', method: "get", onclick: "set_sm_modal()"  %></li>
+
 <% end %>
 
  <li class="divider"></li>
