--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,44 +3,54 @@
 <div id='logo' style="padding:20px">
 <img src='/images/clinic.jpg' width="480"></img>
 </div>
-<div id="address">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (905)-561-9255 </div>
+<div id="address">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (289) 204-0561 </div>
 </div>
 
-<div class="hdr-text">Clinic is closed until further notice </div> 
+<div class="hdr-text">Virtual clinic is now open! </div> 
+
+<div class='spacer-10'></div>
+  <p>  <font color="red"> Due to exceptional circumstances caused by COVID-19 pandemic, our clinic is currently closed. </font> </p>
+
+<p>The good news is that  help is still available!  Telemedicine visits are here.You can now make an appointment and get in touch with  a doctor to renew your medication or discuss medical issue.  </p>
+    
+<p>The best way to do this is to register with us for telemedicine visits.  Registration is secured by industry-standard 256-bit encryption and requires only basic information from you. Once registered, you will be able to make virtual appointments and have access to your visit history.
+</p>
+
+<div align="center"> <%= link_to 'Please Click Here to Register', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
+<div class='spacer-10'></div>
+
+<p>If you are already registered, please log in to make an appointment with <b>Dr. Ostapenko</b>. Patients are served on first come - first served basis.  </p>
+
+<div align="center"><%= link_to 'Make a Telemedicine Appointment', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
 <div class='spacer-20'></div>
+<p>Don’t have a health card? We still can help. Please call the number above and leave a message. We will respond as soon as we can.</p>
 
-<div class="medium">
-  <font color="red"> Due to exceptional circumstances caused by COVID-19 pandemic, our clinic is currently closed. </font>
+<p>
+Covid-19 is here and it’s not a regular flu. This virus is much more contagious and much more deadly, especially for older people with health conditions.  There’s no cure and no vaccine at this point. So please treat the situation seriously and take all measures to keep yourself safe.
+If you have any or all of these symptoms: fever, coughing, weakness, sweating, muscle pain, do not go to see a doctor, this is a sure way to spread the infection!  Please stay at home and call a doctor. You can register and make a telemedicine appointment with dr. Ostapenko using the buttons above.
+</p>
 
-<font style="size: 16px">
-<div class='spacer-10'></div>
-<div>
-  <ul>
-    <li>
-  If you are registered patient and need to renew your medication, or have health-related question, please register below and make a televisit appointment with Dr. Ostapenko. You can also call (289) 204-0561 and leave a message. She will retun your call as soon as she can.
-    </li>
-    <li> If you are not registered with us, but need medical help, please create your patient profile using the button below. </li>
-    <li> 
-      Uninsured patients: we are trying to help everybody - even if you don't have valid health insurance you can still call the number below and get medical help 
-    </li>
-  </ul>
-</div>
-</div>
+<p>
+<b>Mask or no mask?</b> Surgical masks in general, but especially N95 (US) or FFP3 (Europe) help to prevent the spread of the disease. If you have Covid-19 symptoms, it’s crucial to wear a mask in public.
+</p>
 
-<div class='spacer-10'></div>
+<p>
+At this point self-isolation is the best way to keep you safe and prevent the spread of this virus. Please stay home as much as possible. If you do have to get out, respect social distancing rules, do not touch your face and wash your hands often. Here are some helpful videos.
+</p>
 
-<h1>Dr. Ostapenko: (289) 204-0561  </h1>
-
-<div align="center"> <%= link_to 'Please Click Here to Register', new_user_registration_path, class: "btn btn-primary" %> </div>
-</font>
-
-<div class='spacer-30'></div>
-<div style="float:right">
-<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=61aeb9b491&e=b5dca5db64" class="btn btn-danger" target="_new">A video on #socialdistancing</a>
-<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=cc0e3b2071&e=b5dca5db64" class="btn btn-info" target="_new">A quick video with five tips for COVID-19 </a>
-<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=440e19b368&e=b5dca5db64" class="btn btn-warning" target="_new">A video on how to wash your hands</a>
-</div>
+<b>
+<div class="row">
+  <div class="col-md-3 col-md-offset-2">
+<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=61aeb9b491&e=b5dca5db64" target="_new">A video on #socialdistancing</a>
+  </div>
+  <div class="col-md-3">
+<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=cc0e3b2071&e=b5dca5db64" target="_new">A quick video with five tips for COVID-19 </a>
+  </div>
+  <div class="col-md-3">
+<a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=440e19b368&e=b5dca5db64" target="_new">A video on how to wash your hands</a>
+  </div>
+</b>
 
 <!--
 <p class="medium">
