New patient unmarked on successful profile save; Login redirects fixed. 2 Mailers added

--- a/app/views/daysheet/_visit.html.erb
+++ b/app/views/daysheet/_visit.html.erb
@@ -37,7 +37,7 @@
         <td><%= pat.phone %></td>
         <td><%= pat.mobile %></td>
         <td><%= pat.email %></td>
-	<td><%= visit.diag_scode %></td>
+	<td class="text-center"><%= visit.diag_scode %></td>
 	<td><%= visit.proc_codes %></td>
 
 	<% if device_is_desktop? %>
