--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -17,10 +17,10 @@
 	  <th class="tbl_lsm"><%= sortable 'entry_ts', ts.html_safe %></th>
 	  <th class="tbl_lmd">Patient</th>
           <th class="tbl_sm">Type</th>
-          <th class="tbl_md">HC/IFH #</th>
-          <th class="tbl_lsm">Home</th>
-          <th class="tbl_lsm">Mobile</th>
-          <th class="tbl_lsm">email</th>
+          <th class="tbl_md text-center">HC/IFH #</th>
+          <th class="tbl_lsm text-center">Home</th>
+          <th class="tbl_lsm text-center">Mobile</th>
+          <th class="tbl_lsm text-center">email</th>
           <th class="tbl_lsm">Diag.</th>
           <th class="tbl_md">Services</th>
 	  <% if device_is_desktop? %>
