--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,17 +1,17 @@
 <div class="spacer-10"></div>
 <div style="float:left">
 <div id='logo' style="padding:20px">
-<img src='/images/clinic.jpg' width="480"></img>
+<img src='/images/clinic.jpg' width="480" style="padding:20px"></img>
 </div>
 <div id="address">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (289) 204-0561 </div>
 </div>
 
-<div class="hdr-text">Virtual clinic is now open! </div> 
+<div class="hdr-text">Virtual clinic is now open every day! </div> 
 
 <div class='spacer-10'></div>
-  <p>  <font color="red"> Due to exceptional circumstances caused by COVID-19 pandemic, our clinic is currently closed. </font> </p>
+  <p>  <font color="red"> Due to exceptional circumstances caused by COVID-19 pandemic, our Stoney Creek location is currently closed. </font> </p>
 
-<p>The good news is that  help is still available!  Telemedicine visits are here.You can now make an appointment and get in touch with  a doctor to renew your medication or discuss medical issue.  </p>
+<p>The good news is that help is still available! Telemedicine visits are here. You can now make an appointment and get in touch with a doctor to renew your medication or discuss medical issue.  </p>
     
 <p>The best way to do this is to register with us for telemedicine visits.  Registration is secured by industry-standard 256-bit encryption and requires only basic information from you. Once registered, you will be able to make virtual appointments and have access to your visit history.
 </p>
@@ -19,7 +19,7 @@
 <div align="center"> <%= link_to 'Please Click Here to Register', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
 <div class='spacer-10'></div>
 
-<p>If you are already registered, please log in to make an appointment with <b>Dr. Ostapenko</b>. Patients are served on first come - first served basis.  </p>
+<p>If you are already registered, please log in to make an appointment with <b>Dr. Ostapenko</b>. She will call you back as soon as she can. Patients are called on first come - first served basis.  </p>
 
 <div align="center"><%= link_to 'Make a Telemedicine Appointment', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
@@ -39,6 +39,7 @@ If you have any or all of these symptoms: fever, coughing, weakness, sweating, m
 At this point self-isolation is the best way to keep you safe and prevent the spread of this virus. Please stay home as much as possible. If you do have to get out, respect social distancing rules, do not touch your face and wash your hands often. Here are some helpful videos.
 </p>
 
+<div class='spacer-20'></div>
 <b>
 <div class="row">
   <div class="col-md-3 col-md-offset-2">
