--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -52,6 +52,7 @@ At this point self-isolation is the best way to keep you safe and prevent the sp
 <a href="https://oma.us12.list-manage.com/track/click?u=f3031ca7cb6af54104b9de2cd&id=440e19b368&e=b5dca5db64" target="_new">A video on how to wash your hands</a>
   </div>
 </b>
+</div>
 
 <!--
 <p class="medium">
