--- a/app/views/visits/_new.html.erb
+++ b/app/views/visits/_new.html.erb
@@ -6,7 +6,7 @@
  
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal">&times;</button>
-	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %>(<%= @patient.pat_type %>) : New Visit</b>
+	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %>, tel. <%= num_to_phone(@patient.phone) %> : New Visit</b>
 </div>
 <div class="modal-body">
   <%= render "#{current_user.role}_form" %>
