--- a/app/views/patients/_patient_visits.html.erb
+++ b/app/views/patients/_patient_visits.html.erb
@@ -8,6 +8,7 @@
 	    <th class="tbl_md">Date</th>
 	    <th class="tbl_md">Doctor</th>
 	    <th class="tbl_lg">Diagnosis</th>
+            <th class="tbl_lsm"></th>
 	  </tr>
 	  <tbody>
 
