--- a/app/views/visits/edit.html.erb
+++ b/app/views/visits/edit.html.erb
@@ -9,6 +9,6 @@
 
   <div class="form-group col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
 
-    	<%= render 'form' %>
+    <%= render "#{current_user.role}_form" %>
 
   </div>
