--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -2,7 +2,11 @@
 <%= render "shared/modal" %>
 
 <h1><%= @patient.full_name %> (<%= @patient.pat_type %>):  Patient Profile &nbsp; 
+<% if device_is_desktop? %>
   <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_path(@patient), remote: true, 'data-toggle': "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()" %>
+<% else %>
+  <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_path(@patient) %>
+<% end %>
 </h1>
 
   <%= render "#{current_user.role}_show" %>
