--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -34,6 +34,8 @@ If you have any or all of these symptoms: fever, coughing, weakness, sweating, m
 <p>
 <b>Mask or no mask?</b> Surgical masks in general, but especially N95 (US) or FFP3 (Europe) help to prevent the spread of the disease. If you have Covid-19 symptoms, it’s crucial to wear a mask in public.
 </p>
+<p>
+<b>Think you might have it?</b> <a href="https://covid-19.ontario.ca/self-assessment/#q1" target="_new">Here is official Ontario quick self-assessment page</a>
 
 <p>
 At this point self-isolation is the best way to keep you safe and prevent the spread of this virus. Please stay home as much as possible. If you do have to get out, respect social distancing rules, do not touch your face and wash your hands often. Here are some helpful videos.
