--- a/app/views/visits/_patient_form.html.erb
+++ b/app/views/visits/_patient_form.html.erb
@@ -20,19 +20,19 @@
   <!-- Row 3 -->
 
   <div class="col-sm-2">
-  <%= f.input :temp, label: "Temperature" %>
+  <%= f.input :temp, label: "Temperature", hint:'Optional' %>
   </div>
 
   <div class="col-sm-2">
-  <%= f.input :pulse, label: 'Heart Rate' %>
+  <%= f.input :pulse, label: 'Heart Rate', hint:'Optional' %>
   </div>
 
   <div class="col-sm-2">
-  <%= f.input :bp, as: :string, label:'BP (H/L)' %>
+  <%= f.input :bp, as: :string, label:'BP (H/L)', hint:'Optional' %>
   </div>
 
   <div class="col-sm-2">
-  <%= f.input :weight, label: 'Weight (Kg)' %>
+  <%= f.input :weight, label: 'Weight (Kg)', hint:'Optional' %>
   </div>
 </div>
 
