--- a/app/views/patients/_edit.html.erb
+++ b/app/views/patients/_edit.html.erb
@@ -8,7 +8,11 @@
 </div>
 <div class="modal-body">
  <div class="well">
-       <%= render 'form' %>
+   <% if current_user.patient? %>
+    <%= render 'patient_form' %>
+  <% else %>
+    <%= render 'admin_form' %>
+  <% end %>
  </div>
 </div>
 
