--- a/app/views/patients/_new.html.erb
+++ b/app/views/patients/_new.html.erb
@@ -8,11 +8,17 @@
 </div>
 <div class="modal-body">
  <div class="well">
-       <%= render 'form' %>
+   <% if current_user.patient? %>
+    <%= render 'patient_form' %>
+  <% else %>
+    <%= render 'admin_form' %>
+  <% end %>
  </div>
 </div>
 
 <div class="modal-footer">
+  <% unless current_user.patient? %>
 	<small> * Required for HCP/WCB/RMB patients </small>
+  <% end %>
 </div>
 
