--- a/app/views/visits/_admin_form.html.erb
+++ b/app/views/visits/_admin_form.html.erb
@@ -109,7 +109,7 @@
   </div>
 
   <div class="col-sm-2">
-  <%= f.input :duration, collection: DURATIONS, default: 10  %>
+  <%= f.input :duration, hint: 'Minutes',  collection: DURATIONS, default: 10  %>
   </div>
   
   <div class="col-sm-2">
@@ -146,7 +146,7 @@
 
 <div class="row">
   <div class="col-sm-12"> 
-    <%= f.input :document, label: 'Upload Attachment (pdf/jpg)'  %>
+    <%= f.input :document, label: 'Attach document/picture (pdf/jpg)'  %>
   </div>
 </div>
 
