now showing uploaded documents on admin visit form

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
 
 <p>The good news is that help is still available! Telemedicine visits are here. You can now make an appointment and get in touch with a doctor to renew your medication or discuss medical issue.  </p>
     
-<p>The best way to do this is to register with us for telemedicine visits.  Registration is secured by industry-standard 256-bit encryption and requires only basic information from you. Once registered, you will be able to make virtual appointments and have access to your visit history.
+<p>The best way to do this is to register with us for telemedicine visits. Just enter your health card number, email and set a password. If you visited our clinic before, you will have immediate access to your patient record and will be able to book new telemedicine visits right after you register. Registration is secured by industry-standard 256-bit encryption. Visits booked trough this website have priority over direct phone calls, so we encourage everybody to register to save time for you and a doctor. Spelling names and numbers over the phone is time consuming and error-prone.
 </p>
 
 <div align="center"> <%= link_to 'Please Click Here to Register', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
