--- a/app/views/visits/_edit.html.erb
+++ b/app/views/visits/_edit.html.erb
@@ -5,7 +5,7 @@
  
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal">&times;</button>
-	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %>(<%= @patient.pat_type %>) : Visit of <%= @visit.entry_ts %> <%= " - Billing Ref# : #{@visit.billing_ref}" if @visit.billing_ref %></b>
+        <b class="modal-title" id="myModalLabel"><%= @patient.full_name %>(<%= @patient.pat_type %>) : Visit of <%= @visit.entry_ts %></b>
 </div>
 <div class="modal-body">
   <%= render "#{current_user.role}_form" %>
