--- a/app/views/user_mailer/new_registration.html.erb
+++ b/app/views/user_mailer/new_registration.html.erb
@@ -2,7 +2,7 @@ Dear EMR Walk-in staff member,
 
 <p>New user "<%= @user.name %>", role: <%= @user.role %> registered online at <%= @user.created_at %> </p>
 
-<p><%= link_to "You can see new user profile here", patient_url(@user.patient) %> </p>
+<p><%= link_to "You can see new patient profile here", patient_url(@user.patient) %> </p>
 <p>&nbsp;</p>
 
 Walk-In EMR admin
