--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
 
 <p>The good news is that help is still available! Telemedicine visits are here. You can now make an appointment and get in touch with a doctor to renew your medication or discuss medical issue.  </p>
     
-<p>The best way to do this is to register with us for telemedicine visits. Just enter your health card number, email and set a password. If you visited our clinic before, you will have immediate access to your patient record and will be able to book new telemedicine visits right after you register. Registration is secured by industry-standard 256-bit encryption. Visits booked trough this website have priority over direct phone calls, so we encourage everybody to register to save time for you and a doctor. Spelling names and numbers over the phone is time consuming and error-prone.
+<p>The best way to do this is to register with us using the button below. Just enter your health card number, email and set a password. If you visited our clinic before, you will have immediate access to your patient record and will be able to book your first visit. This site is secured by SSL certificate, just like your bank's website. Visits booked here have priority over direct phone calls, so we encourage everybody to register and save time for you and a doctor. Spelling names and numbers over the phone is time consuming and error-prone, so <b>please call only if you don't have valid health card.</b> 
 </p>
 
 <div align="center"> <%= link_to 'Please Click Here to Register', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
@@ -24,7 +24,7 @@
 <div align="center"><%= link_to 'Make a Telemedicine Appointment', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
 <div class='spacer-20'></div>
-<p>Don’t have a health card? We still can help. Please call the number above and leave a message. We will respond as soon as we can.</p>
+<p>Don’t have a health card? We still can help. Please call the number above and leave a message. We will respond as soon as we can. </p>
 
 <p>
 Covid-19 is here and it’s not a regular flu. This virus is much more contagious and much more deadly, especially for older people with health conditions.  There’s no cure and no vaccine at this point. So please treat the situation seriously and take all measures to keep yourself safe.
