form error handling fine tuned

--- a/app/views/patients/_patient_form.html.erb
+++ b/app/views/patients/_patient_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for (@patient) do |f| %>
   <%= f.error_notification %>
+  <%# render 'shared/error_messages', object: f.object %>
   
   <%= f.hidden_field :pat_type, value: HCP_PATIENT %>
 
