--- a/app/views/patients/_patient_show.html.erb
+++ b/app/views/patients/_patient_show.html.erb
@@ -26,7 +26,7 @@ Medications:
 <% end %> </b>
 </pre>
 
-<p><b> To make an appointment please click a button below. Describe the reason for your virtual visit, upload any documents/pictures and save it. Dr. Ostapenko will get in touch with you as soon as she can. As usual, appointments are handled on first come - first served basis.  </b></p>
+<p><b> To request an appointment please click the button below. Describe the reason for your virtual visit, upload any documents/pictures and save it. Dr. Ostapenko will get in touch with you as soon as she can. As usual, appointments are handled on first come - first served basis.  </b></p>
 	 
 &nbsp; <%# render("medications", remote: remote) if @patient.medications.any? %>
 &nbsp; <%# render("prescriptions", remote: remote) if @patient.prescriptions.any? %>
