--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -367,10 +367,15 @@ input, select{
   }
 }
 
+.form-group-invalid {
+    color: red;
+}
+
 .field_with_errors {
   @extend .has-error;
   .form-control {
-    color: $state-danger-text;
+//    color: $state-danger-text;
+    color: red;
   }
 }
 
