patient_form email change is disabled; version code is now optional

--- a/app/views/patients/_patient_form.html.erb
+++ b/app/views/patients/_patient_form.html.erb
@@ -96,7 +96,7 @@
   </div>
   
   <div class="col-sm-3">
-  <%= f.input :email, hint: 'Required' %>
+  <%= f.input :email, hint: 'Required', disabled: true %>
   </div>
 </div>
 
