--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -529,6 +529,10 @@ input, select{
   float: left;
 }
 
+.notice {
+  background-color :#ffc107;  // overrides default colors!
+}
+
 .alert .glyphicon{
     display:table-cell;
 }
