flash message font; email now saved from user to patient profile; not all footer links shown to patient

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -533,6 +533,10 @@ input, select{
   background-color :#ffc107;  // overrides default colors!
 }
 
+#flash_alert {
+  font-weight: bold;
+}
+
 .alert .glyphicon{
     display:table-cell;
 }
