--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+  <%= render 'layouts/facebook_messenger' %>
   <div class="container">
     <%= render 'layouts/navigation' %>
 
