home page simplified

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,23 +6,22 @@
 <div id="address">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (289) 204-0561 </div>
 </div>
 
-<div class="hdr-text">Virtual clinic is now open every day! </div> 
+<div class="hdr-text">OHIP covered telemedicine visits for all </div> 
 
-<div class='spacer-10'></div>
-  <p>  <font color="red"> Due to exceptional circumstances caused by COVID-19 pandemic, our Stoney Creek location is currently closed. </font> </p>
+<div class='spacer-20'></div>
 
-<p>The good news is that help is still available! Telemedicine visits are here. You can now make an appointment and get in touch with a doctor to renew your medication or discuss medical issue.  </p>
+<font size=3>
+  <p> Don't want to stay in a busy waiting room during pandemic? You don't have to. You can now call a doctor and discuss your medical issue or renew your medication.</p>
+  <p> Simply register with your OHIP card, confirm your email and login to make your first telephone appointment with a doctor right away. </p>
     
-<p>The best way to do this is to register with us using the button below. Just enter your health card number, email and set a password. If you visited our clinic before, you will have immediate access to your patient record and will be able to book your first visit. This site is secured by SSL certificate, just like your bank's website. Visits booked here have priority over direct phone calls, so we encourage everybody to register and save time for you and a doctor. Spelling names and numbers over the phone is time consuming and error-prone. 
-</p>
-
-<div align="center"> <%= link_to 'Please Click Here to Register', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
+<div align="center"> <%= link_to 'Yes! I want to talk to a doctor', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
 <div class='spacer-10'></div>
 
-<p>If you are already registered, please log in to make an appointment with <b>Dr. Ostapenko</b>. She will call you back as soon as she can. Patients are called on first come - first served basis.  </p>
+<p>Already registered? Please log in to make an appointment with <b>Dr. Ostapenko</b>. She will call you back as soon as she can. </p>
 
-<div align="center"><%= link_to 'Make a Telemedicine Appointment', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+<div align="center"><%= link_to 'Make an Appointment', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
+<div class='spacer-20'></div>
 <div class='spacer-20'></div>
 <p>Don’t have a health card? We still can help. Please call the number above and leave a message. We will respond as soon as we can. </p>
 
@@ -40,6 +39,7 @@ If you have any or all of these symptoms: fever, coughing, weakness, sweating, m
 <p>
 At this point self-isolation is the best way to keep you safe and prevent the spread of this virus. Please stay home as much as possible. If you do have to get out, respect social distancing rules, do not touch your face and wash your hands often. Here are some helpful videos.
 </p>
+</font>
 
 <div class='spacer-20'></div>
 <b>
