--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
   <%= f.full_error :patient_id %> <%#unless f.error :ohip_num %>
   
 <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
-<h3>New User Registration</h3>
+<h3>Patient Registration</h3>
 <div class="well">
 
   <div class="row">
