bigger buttons, margin adjustments

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,12 +10,14 @@
 
 <div class='spacer-20'></div>
 
+<div style="padding:20px;">
 <font size=3>
   <p> Don't want to stay in a busy waiting room during pandemic? You don't have to. You can now call a doctor and discuss your medical issue or renew your medication.</p>
   <p> Simply register with your OHIP card, confirm your email and login to make your first telephone appointment with a doctor right away. </p>
     
-<div align="center"> <%= link_to 'Yes! I want to talk to a doctor', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
 <div class='spacer-10'></div>
+<div align="center"> <%= link_to 'Yes! I want to talk to a doctor', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
+<div class='spacer-20'></div>
 
 <p>Already registered? Please log in to make an appointment with <b>Dr. Ostapenko</b>. She will call you back as soon as she can. </p>
 
@@ -40,6 +42,7 @@ If you have any or all of these symptoms: fever, coughing, weakness, sweating, m
 At this point self-isolation is the best way to keep you safe and prevent the spread of this virus. Please stay home as much as possible. If you do have to get out, respect social distancing rules, do not touch your face and wash your hands often. Here are some helpful videos.
 </p>
 </font>
+</div>
 
 <div class='spacer-20'></div>
 <b>
