--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
+    <%= render 'layouts/metatags' %>
     <%= render 'layouts/rails_default' %>  
     <link rel="icon"  href="/favicon.ico" sizes="16x16" />
   </head>
