sign up form simplified

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,11 +8,8 @@
 <div class="well">
 
   <div class="row">
-  <div class="col-md-9">
-    <%= f.input :ohip_num, label: 'Health Card#', autofocus: true, input_html: { autocomplete: "ohip_num"}  %>
-  </div>
-  <div class="col-md-3">
-    <%= f.input :ohip_ver, label: 'Ver' %>
+  <div class="col-md-12">
+    <%= f.input :ohip_num, label: 'Health Card# including version code', autofocus: true, input_html: { autocomplete: "ohip_num"}  %>
   </div>
   </div>
 
