--- a/app/views/layouts/_metatags.html.erb
+++ b/app/views/layouts/_metatags.html.erb
@@ -1,4 +1,4 @@
 <meta name="copyright" content="Walk-In EMR is owned and operated by Stoney Creek Medical Walk-In Clinic. Copyright &amp;copy; 2018-2020. All rights reserved">
 <meta name="description" content="OHIP covered telemedicine visits. Prescription renewals. Canada wide.">
 <meta name="robots" content="index, follow">
-<meta name="keywords" content="telemedicine, canadian doctor, online doctor appointments, virtual medicine, virtual medical appointments, online medical consultations, online doctor visits, doctor appointments by phone, ohip covered telemedicine ">
+<meta name="keywords" content="telemedicine, canadian doctor, online prescriptions, prescriptions over the phone, prescription renewals,online doctor appointments, virtual medicine, virtual medical appointments, online medical consultations, online doctor visits, doctor appointments by phone, ohip covered telemedicine, virtual doctor appointments, OTN, free virtual care, digital walk-in clinic, telemedicine network, ontario telemedicine, clinical telemedicine, family doctor online, get medical advice over the phone, licensed doctor online, caring online doctor ">
